--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "build": "webpack --config ./config/webpack.config.prod.js",
     "start": "webpack serve --config ./config/webpack.config.dev.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "p5": "^1.5.0"
+  },
   "devDependencies": {
+    "@types/p5": "^1.4.3",
     "adm-zip": "^0.5.9",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.4.0",
     "html-webpack-plugin": "^5.4.0",
     "style-loader": "^3.3.0",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.9.3",
     "webpack": "^5.59.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
